--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
       <div class="container">
     <!-- Header -->
     <div class="header">
-      <h1>Dept. of EEE</h1>
-      <h2>1st(A) Semester Schedule</h2>
+      <h1>Dept. of Economics</h1>
+      <h2>5th Semester Schedule</h2>
       <p id="date-time"></p>
       <p id="last-synced"></p>
       <button id="semesterButton">Select Semester</button>
